# goit-PW-hw-14

dz_14/: .env.exampl  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dz_14/docs/: conf.py  index.rst
dz_14/docs/_build/doctrees/: environment.pickle  index.doctree
dz_14/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dz_14/docs/_build/html/_sources/: index.rst.txt
dz_14/migrations/: env.py
dz_14/migrations/versions/: 35ffbb0b005d_init.py
dz_14/postgres-data/: postmaster.pid
dz_14/postgres-data/base/13481/: 1247  1249  1259  16384  16387  16389  16391  16397  16398  16400  16402  16404  16408  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  (+2 more)
dz_14/postgres-data/global/: pg_control  pg_internal.init
dz_14/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
dz_14/src/: schemas.py
dz_14/src/conf/: config.py
dz_14/src/database/: db.py  models.py
dz_14/src/repository/: users.py
dz_14/src/routes/: auth.py  contacts.py  users.py
dz_14/src/services/: auth.py  email.py
dz_14/src/services/templates/: email_template.html
dz_14/src/templates/: index.html
dz_14/tests/: test_unit_repository_users.py
